--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Karaportti Aikataulut</title>
+    <title>Metropolia Infotaulut</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
